--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,19 @@ sandbox/gradle/wrapper/gradle-wrapper.properties
 sandbox/gradlew
 sandbox/gradlew.bat
 sandbox/src/main/java/MyFirstProgram.java
+
+
+addressbook-web-tests/build.gradle
+addressbook-web-tests/build/distributions/sandbox.tar
+addressbook-web-tests/build/distributions/sandbox.zip
+addressbook-web-tests/build/libs/sandbox.jar
+addressbook-web-tests/build/scripts/sandbox
+addressbook-web-tests/build/scripts/sandbox.bat
+addressbook-web-tests/build/tmp/compileJava/source-classes-mapping.txt
+addressbook-web-tests/build/tmp/jar/MANIFEST.MF
+addressbook-web-tests/gradle/wrapper/gradle-wrapper.jar
+addressbook-web-tests/gradle/wrapper/gradle-wrapper.properties
+addressbook-web-tests/gradlew
+addressbook-web-tests/gradlew.bat
+
+
